--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Grupo Loray</title>
 </head>
 <body>
-    <img src="img/construccion.jpg" alt="Logo">
+    <img src="construccion.jpg" alt="Logo">
     <h1>¡Gracias por visitarnos!</h1>
     <h1>Pronto estaremos en línea...</h1>
 
